--- a/index.md.mustache
+++ b/index.md.mustache
@@ -55,3 +55,5 @@ Related publications, if any, are listed below.
 {{# authors }}
 - {{& name }}
 {{/ authors }}{{& after_authors }}
+
+{{& documentation }}
